# dns-server

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  README.org  example.zone
doc/: manual.tex  refs.bib  title.tex
doc/img/: FIT_color_CMYK_EN.eps  logo.eps
src/: argParser.cpp  argParser.h  dnsMsg.cpp  dnsMsg.h  main.cpp  main.h  rr.cpp  rr.h  server.cpp  server.h
